compiler/dump/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    VOID
    LBRACKET
    LONG
    ELLIPSIS
    ENUM
    PERIOD
<<<<<<< HEAD
    ARROW
=======
>>>>>>> FETCH_HEAD
    MINUSEQUAL
    TIMESEQUAL
    OR
    SHORT
    RSHIFTEQUAL
    STATIC
    SIZEOF
    UNSIGNED
    UNION
    COLON
    FOR
    PLUSPLUS
    AND
    TYPEID
    SIGNED
    CONTINUE
    NOT
    OREQUAL
    MOD
    RSHIFT
    DEFAULT
    WHILE
    DIVEQUAL
    EXTERN
    CASE
    REGISTER
    MODEQUAL
    SWITCH
    PLUSEQUAL
<<<<<<< HEAD
    CONDOP
=======
>>>>>>> FETCH_HEAD
    VOLATILE
    ANDEQUAL
    DO
    LNOT
    CONST
    LSHIFT
    GOTO
    CCONST
    TYPEDEF
    XOR
    AUTO
    MINUSMINUS
    STRUCT
    FLOAT
    XOREQUAL
    LSHIFTEQUAL
    RBRACKET

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> statement
Rule 5     function_definition -> type ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
Rule 6     function_definition -> type ID LPAREN parameter_list RPAREN LBRACE RBRACE
Rule 7     parameter_list -> parameter_declaration
Rule 8     parameter_list -> parameter_list COMMA parameter_declaration
Rule 9     parameter_declaration -> primary_expression
Rule 10    parameter_declaration -> type ID
Rule 11    parameter_declaration -> type ID EQUALS assignment_expression
Rule 12    type -> INT
Rule 13    type -> DOUBLE
Rule 14    type -> CHAR
Rule 15    type -> STRING
Rule 16    type -> KEY
Rule 17    statement -> expression_statement
Rule 18    statement -> compound_statement
Rule 19    statement -> declaration_statement
Rule 20    statement -> selection_statement
Rule 21    statement -> iteration_statement
Rule 22    statement -> return_statement
Rule 23    statement -> break_statement
Rule 24    iteration_statement -> REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 25    iteration_statement -> UNTIL LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 26    selection_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 27    selection_statement -> IF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement_list RBRACE
Rule 28    declaration_statement -> type ID SEMI
Rule 29    declaration_statement -> type ID EQUALS assignment_expression SEMI
Rule 30    compound_statement -> LBRACE RBRACE
Rule 31    compound_statement -> LBRACE statement_list RBRACE
Rule 32    expression_statement -> expression SEMI
Rule 33    expression_statement -> SEMI
Rule 34    expression -> assignment_expression
Rule 35    expression -> function_expression
Rule 36    expression -> LPAREN expression RPAREN
Rule 37    function_expression -> ID LPAREN parameter_list RPAREN
Rule 38    assignment_expression -> ID EQUALS assignment_expression
Rule 39    assignment_expression -> logical_OR_expression EQUALS assignment_expression
Rule 40    assignment_expression -> logical_OR_expression
Rule 41    logical_OR_expression -> logical_AND_expression
Rule 42    logical_OR_expression -> logical_OR_expression LOR logical_AND_expression
Rule 43    logical_AND_expression -> equality_expression
Rule 44    logical_AND_expression -> logical_AND_expression LAND equality_expression
Rule 45    equality_expression -> relational_expression
Rule 46    equality_expression -> equality_expression EQ relational_expression
Rule 47    equality_expression -> equality_expression NE relational_expression
Rule 48    relational_expression -> additive_expression
Rule 49    relational_expression -> relational_expression LT additive_expression
Rule 50    relational_expression -> relational_expression GT additive_expression
Rule 51    relational_expression -> relational_expression LE additive_expression
Rule 52    relational_expression -> relational_expression GE additive_expression
Rule 53    additive_expression -> multiplicative_expression
Rule 54    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 55    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 56    multiplicative_expression -> primary_expression
Rule 57    multiplicative_expression -> multiplicative_expression TIMES primary_expression
Rule 58    multiplicative_expression -> multiplicative_expression DIVIDE primary_expression
Rule 59    statement_list -> statement
Rule 60    statement_list -> statement_list statement
Rule 61    primary_expression -> LPAREN expression RPAREN
Rule 62    primary_expression -> constant
Rule 63    primary_expression -> ID
Rule 64    primary_expression -> reserved
Rule 65    primary_expression -> empty
Rule 66    constant -> ICONST
Rule 67    constant -> FCONST
Rule 68    constant -> SCONST
Rule 69    reserved -> ENTER
Rule 70    return_statement -> RETURN SEMI
Rule 71    return_statement -> RETURN expression SEMI
Rule 72    break_statement -> BREAK SEMI
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ANDEQUAL             : 
<<<<<<< HEAD
ARROW                : 
=======
>>>>>>> FETCH_HEAD
AUTO                 : 
BREAK                : 72
CASE                 : 
CCONST               : 
CHAR                 : 14
COLON                : 
COMMA                : 8
<<<<<<< HEAD
CONDOP               : 
=======
>>>>>>> FETCH_HEAD
CONST                : 
CONTINUE             : 
DEFAULT              : 
DIVEQUAL             : 
DIVIDE               : 58
DO                   : 
DOUBLE               : 13
ELLIPSIS             : 
ELSE                 : 27
ENTER                : 69
ENUM                 : 
EQ                   : 46
EQUALS               : 11 29 38 39
EXTERN               : 
FCONST               : 67
FLOAT                : 
FOR                  : 
GE                   : 52
GOTO                 : 
GT                   : 50
ICONST               : 66
ID                   : 5 6 10 11 28 29 37 38 63
IF                   : 26 27
INT                  : 12
KEY                  : 16
LAND                 : 44
LBRACE               : 5 6 24 25 26 27 27 30 31
LBRACKET             : 
LE                   : 51
LNOT                 : 
LONG                 : 
LOR                  : 42
LPAREN               : 5 6 24 25 26 27 36 37 61
LSHIFT               : 
LSHIFTEQUAL          : 
LT                   : 49
MINUS                : 55
MINUSEQUAL           : 
MINUSMINUS           : 
MOD                  : 
MODEQUAL             : 
NE                   : 47
NOT                  : 
OR                   : 
OREQUAL              : 
PERIOD               : 
PLUS                 : 54
PLUSEQUAL            : 
PLUSPLUS             : 
RBRACE               : 5 6 24 25 26 27 27 30 31
RBRACKET             : 
REGISTER             : 
REPEAT               : 24
RETURN               : 70 71
RPAREN               : 5 6 24 25 26 27 36 37 61
RSHIFT               : 
RSHIFTEQUAL          : 
SCONST               : 68
SEMI                 : 28 29 32 33 70 71 72
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRING               : 15
STRUCT               : 
SWITCH               : 
TIMES                : 57
TIMESEQUAL           : 
TYPEDEF              : 
TYPEID               : 
UNION                : 
UNSIGNED             : 
UNTIL                : 25
VOID                 : 
VOLATILE             : 
WHILE                : 
XOR                  : 
XOREQUAL             : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 48 49 50 51 52 54 55
assignment_expression : 11 29 34 38 39
break_statement      : 23
compound_statement   : 18
constant             : 62
declaration_statement : 19
empty                : 65
equality_expression  : 43 44 46 47
expression           : 24 25 26 27 32 36 61 71
expression_statement : 17
external_declaration : 1 2
function_definition  : 3
function_expression  : 35
iteration_statement  : 21
logical_AND_expression : 41 42 44
logical_OR_expression : 39 40 42
multiplicative_expression : 53 54 55 57 58
parameter_declaration : 7 8
parameter_list       : 5 6 8 37
primary_expression   : 9 56 57 58
relational_expression : 45 46 47 49 50 51 52
reserved             : 64
return_statement     : 22
selection_statement  : 20
statement            : 4 27 59 60
statement_list       : 5 24 25 26 27 31 60
translation_unit     : 2 0
type                 : 5 6 10 11 28 29

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . statement
    (5) function_definition -> . type ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (6) function_definition -> . type ID LPAREN parameter_list RPAREN LBRACE RBRACE
    (17) statement -> . expression_statement
    (18) statement -> . compound_statement
    (19) statement -> . declaration_statement
    (20) statement -> . selection_statement
    (21) statement -> . iteration_statement
    (22) statement -> . return_statement
    (23) statement -> . break_statement
    (12) type -> . INT
    (13) type -> . DOUBLE
    (14) type -> . CHAR
    (15) type -> . STRING
    (16) type -> . KEY
    (32) expression_statement -> . expression SEMI
    (33) expression_statement -> . SEMI
    (30) compound_statement -> . LBRACE RBRACE
    (31) compound_statement -> . LBRACE statement_list RBRACE
    (28) declaration_statement -> . type ID SEMI
    (29) declaration_statement -> . type ID EQUALS assignment_expression SEMI
    (26) selection_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (27) selection_statement -> . IF LPAREN expression RPAREN LBRACE statement RBRACE ELSE LBRACE statement_list RBRACE
    (24) iteration_statement -> . REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
    (25) iteration_statement -> . UNTIL LPAREN expression RPAREN LBRACE statement_list RBRACE
    (70) return_statement -> . RETURN SEMI
    (71) return_statement -> . RETURN expression SEMI
    (72) break_statement -> . BREAK SEMI
    (34) expression -> . assignment_expression
    (35) expression -> . function_expression
    (36) expression -> . LPAREN expression RPAREN
    (38) assignment_expression -> . ID EQUALS assignment_expression
    (39) assignment_expression -> . logical_OR_expression EQUALS assignment_expression
    (40) assignment_expression -> . logical_OR_expression
    (37) function_expression -> . ID LPAREN parameter_list RPAREN
    (41) logical_OR_expression -> . logical_AND_expression
    (42) logical_OR_expression -> . logical_OR_expression LOR logical_AND_expression
    (43) logical_AND_expression -> . equality_expression
    (44) logical_AND_expression -> . logical_AND_expression LAND equality_expression
    (45) equality_expression -> . relational_expression
    (46) equality_expression -> . equality_expression EQ relational_expression
    (47) equality_expression -> . equality_expression NE relational_expression
    (48) relational_expression -> . additive_expression
    (49) relational_expression -> . relational_expression LT additive_expression
    (50) relational_expression -> . relational_expression GT additive_expression
    (51) relational_expression -> . relational_expression LE additive_expression
    (52) relational_expression -> . relational_expression GE additive_expression
    (53) additive_expression -> . multiplicative_expression
    (54) additive_expression -> . additive_expression PLUS multiplicative_expression
    (55) additive_expression -> . additive_expression MINUS multiplicative_expression
    (56) multiplicative_expression -> . primary_expression
    (57) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (58) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (61) primary_expression -> . LPAREN expression RPAREN
    (62) primary_expression -> . constant
    (63) primary_expression -> . ID
    (64) primary_expression -> . reserved
    (65) primary_expression -> . empty
    (66) constant -> . ICONST
    (67) constant -> . FCONST
    (68) constant -> . SCONST
    (69) reserved -> . ENTER
    (73) empty -> .

  ! shift/reduce conflict for SEMI resolved as shift
    INT             shift and go to state 34
    DOUBLE          shift and go to state 35
<<<<<<< HEAD
    CHAR            shift and go to state 32
=======
    CHAR            shift and go to state 3
>>>>>>> FETCH_HEAD
    STRING          shift and go to state 7
    KEY             shift and go to state 40
    SEMI            shift and go to state 10
    LBRACE          shift and go to state 24
    IF              shift and go to state 31
    REPEAT          shift and go to state 21
    UNTIL           shift and go to state 14
    RETURN          shift and go to state 2
    BREAK           shift and go to state 37
    LPAREN          shift and go to state 27
    ID              shift and go to state 29
    ICONST          shift and go to state 25
    FCONST          shift and go to state 9
    SCONST          shift and go to state 13
    ENTER           shift and go to state 28
    TIMES           reduce using rule 73 (empty -> .)
    DIVIDE          reduce using rule 73 (empty -> .)
    PLUS            reduce using rule 73 (empty -> .)
    MINUS           reduce using rule 73 (empty -> .)
    LT              reduce using rule 73 (empty -> .)
    GT              reduce using rule 73 (empty -> .)
    LE              reduce using rule 73 (empty -> .)
    GE              reduce using rule 73 (empty -> .)
    EQ              reduce using rule 73 (empty -> .)
    NE              reduce using rule 73 (empty -> .)
    LAND            reduce using rule 73 (empty -> .)
    EQUALS          reduce using rule 73 (empty -> .)
    LOR             reduce using rule 73 (empty -> .)

  ! SEMI            [ reduce using rule 73 (empty -> .) ]

    expression_statement           shift and go to state 1
    constant                       shift and go to state 4
<<<<<<< HEAD
    break_statement                shift and go to state 3
=======
    break_statement                shift and go to state 32
>>>>>>> FETCH_HEAD
    reserved                       shift and go to state 22
    iteration_statement            shift and go to state 5
    additive_expression            shift and go to state 6
    external_declaration           shift and go to state 8
    compound_statement             shift and go to state 11
    selection_statement            shift and go to state 12
    return_statement               shift and go to state 15
    relational_expression          shift and go to state 16
    statement                      shift and go to state 17
    logical_AND_expression         shift and go to state 18
    type                           shift and go to state 19
    translation_unit               shift and go to state 20
    assignment_expression          shift and go to state 36
    multiplicative_expression      shift and go to state 23
    primary_expression             shift and go to state 26
    equality_expression            shift and go to state 30
    function_definition            shift and go to state 33
    declaration_statement          shift and go to state 38
    empty                          shift and go to state 39
    function_expression            shift and go to state 41
    expression                     shift and go to state 42
    logical_OR_expression          shift and go to state 43

state 1

    (17) statement -> expression_statement .

    RBRACE          reduce using rule 17 (statement -> expression_statement .)
    SEMI            reduce using rule 17 (statement -> expression_statement .)
    LBRACE          reduce using rule 17 (statement -> expression_statement .)
    IF              reduce using rule 17 (statement -> expression_statement .)
    REPEAT          reduce using rule 17 (statement -> expression_statement .)
    UNTIL           reduce using rule 17 (statement -> expression_statement .)
    RETURN          reduce using rule 17 (statement -> expression_statement .)
    BREAK           reduce using rule 17 (statement -> expression_statement .)
    LPAREN          reduce using rule 17 (statement -> expression_statement .)
    INT             reduce using rule 17 (statement -> expression_statement .)
    DOUBLE          reduce using rule 17 (statement -> expression_statement .)
    CHAR            reduce using rule 17 (statement -> expression_statement .)
    STRING          reduce using rule 17 (statement -> expression_statement .)
    KEY             reduce using rule 17 (statement -> expression_statement .)
    ID              reduce using rule 17 (statement -> expression_statement .)
    ICONST          reduce using rule 17 (statement -> expression_statement .)
    FCONST          reduce using rule 17 (statement -> expression_statement .)
    SCONST          reduce using rule 17 (statement -> expression_statement .)
    ENTER           reduce using rule 17 (statement -> expression_statement .)
    EQUALS          reduce using rule 17 (statement -> expression_statement .)
    LOR             reduce using rule 17 (statement -> expression_statement .)
    LAND            reduce using rule 17 (statement -> expression_statement .)
    EQ              reduce using rule 17 (statement -> expression_statement .)
    NE              reduce using rule 17 (statement -> expression_statement .)
    LT              reduce using rule 17 (statement -> expression_statement .)
    GT              reduce using rule 17 (statement -> expression_statement .)
    LE              reduce using rule 17 (statement -> expression_statement .)
    GE              reduce using rule 17 (statement -> expression_statement .)
    PLUS            reduce using rule 17 (statement -> expression_statement .)
    MINUS           reduce using rule 17 (statement -> expression_statement .)
    TIMES           reduce using rule 17 (statement -> expression_statement .)
    DIVIDE          reduce using rule 17 (statement -> expression_statement .)
    $end            reduce using rule 17 (statement -> expression_statement .)


state 2

    (70) return_statement -> RETURN . SEMI
    (71) return_statement -> RETURN . expression SEMI
    (34) expression -> . assignment_expression
    (35) expression -> . function_expression
    (36) expression -> . LPAREN expression RPAREN
    (38) assignment_expression -> . ID EQUALS assignment_expression
    (39) assignment_expression -> . logical_OR_expression EQUALS assignment_expression
    (40) assignment_expression -> . logical_OR_expression
    (37) function_expression -> . ID LPAREN parameter_list RPAREN
    (41) logical_OR_expression -> . logical_AND_expression
    (42) logical_OR_expression -> . logical_OR_expression LOR logical_AND_expression
    (43) logical_AND_expression -> . equality_expression
    (44) logical_AND_expression -> . logical_AND_expression LAND equality_expression
    (45) equality_expression -> . relational_expression
    (46) equality_expression -> . equality_expression EQ relational_expression
    (47) equality_expression -> . equality_expression NE relational_expression
    (48) relational_expression -> . additive_expression
    (49) relational_expression -> . relational_expression LT additive_expression
    (50) relational_expression -> . relational_expression GT additive_expression
    (51) relational_expression -> . relational_expression LE additive_expression
    (52) relational_expression -> . relational_expression GE additive_expression
    (53) additive_expression -> . multiplicative_expression
    (54) additive_expression -> . additive_expression PLUS multiplicative_expression
    (55) additive_expression -> . additive_expression MINUS multiplicative_expression
    (56) multiplicative_expression -> . primary_expression
    (57) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (58) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (61) primary_expression -> . LPAREN expression RPAREN
    (62) primary_expression -> . constant
    (63) primary_expression -> . ID
    (64) primary_expression -> . reserved
    (65) primary_expression -> . empty
    (66) constant -> . ICONST
    (67) constant -> . FCONST
    (68) constant -> . SCONST
    (69) reserved -> . ENTER
    (73) empty -> .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 44
    LPAREN          shift and go to state 27
    ID              shift and go to state 29
    ICONST          shift and go to state 25
    FCONST          shift and go to state 9
    SCONST          shift and go to state 13
    ENTER           shift and go to state 28
    TIMES           reduce using rule 73 (empty -> .)
    DIVIDE          reduce using rule 73 (empty -> .)
    PLUS            reduce using rule 73 (empty -> .)
    MINUS           reduce using rule 73 (empty -> .)
    LT              reduce using rule 73 (empty -> .)
    GT              reduce using rule 73 (empty -> .)
    LE              reduce using rule 73 (empty -> .)
    GE              reduce using rule 73 (empty -> .)
    EQ              reduce using rule 73 (empty -> .)
    NE              reduce using rule 73 (empty -> .)
    LAND            reduce using rule 73 (empty -> .)
    EQUALS          reduce using rule 73 (empty -> .)
    LOR             reduce using rule 73 (empty -> .)

  ! SEMI            [ reduce using rule 73 (empty -> .) ]

    constant                       shift and go to state 4
    assignment_expression          shift and go to state 36
    multiplicative_expression      shift and go to state 23
    logical_OR_expression          shift and go to state 43
    additive_expression            shift and go to state 6
    empty                          shift and go to state 39
    relational_expression          shift and go to state 16
    reserved                       shift and go to state 22
    function_expression            shift and go to state 41
    expression                     shift and go to state 45
    logical_AND_expression         shift and go to state 18
    equality_expression            shift and go to state 30
    primary_expression             shift and go to state 26

state 3

<<<<<<< HEAD
    (23) statement -> break_statement .

    RBRACE          reduce using rule 23 (statement -> break_statement .)
    SEMI            reduce using rule 23 (statement -> break_statement .)
    LBRACE          reduce using rule 23 (statement -> break_statement .)
    IF              reduce using rule 23 (statement -> break_statement .)
    REPEAT          reduce using rule 23 (statement -> break_statement .)
    UNTIL           reduce using rule 23 (statement -> break_statement .)
    RETURN          reduce using rule 23 (statement -> break_statement .)
    BREAK           reduce using rule 23 (statement -> break_statement .)
    LPAREN          reduce using rule 23 (statement -> break_statement .)
    INT             reduce using rule 23 (statement -> break_statement .)
    DOUBLE          reduce using rule 23 (statement -> break_statement .)
    CHAR            reduce using rule 23 (statement -> break_statement .)
    STRING          reduce using rule 23 (statement -> break_statement .)
    KEY             reduce using rule 23 (statement -> break_statement .)
    ID              reduce using rule 23 (statement -> break_statement .)
    ICONST          reduce using rule 23 (statement -> break_statement .)
    FCONST          reduce using rule 23 (statement -> break_statement .)
    SCONST          reduce using rule 23 (statement -> break_statement .)
    ENTER           reduce using rule 23 (statement -> break_statement .)
    EQUALS          reduce using rule 23 (statement -> break_statement .)
    LOR             reduce using rule 23 (statement -> break_statement .)
    LAND            reduce using rule 23 (statement -> break_statement .)
    EQ              reduce using rule 23 (statement -> break_statement .)
    NE              reduce using rule 23 (statement -> break_statement .)
    LT              reduce using rule 23 (statement -> break_statement .)
    GT              reduce using rule 23 (statement -> break_statement .)
    LE              reduce using rule 23 (statement -> break_statement .)
    GE              reduce using rule 23 (statement -> break_statement .)
    PLUS            reduce using rule 23 (statement -> break_statement .)
    MINUS           reduce using rule 23 (statement -> break_statement .)
    TIMES           reduce using rule 23 (statement -> break_statement .)
    DIVIDE          reduce using rule 23 (statement -> break_statement .)
    $end            reduce using rule 23 (statement -> break_statement .)
=======
    (14) type -> CHAR .

    ID              reduce using rule 14 (type -> CHAR .)
>>>>>>> FETCH_HEAD


state 4

    (62) primary_expression -> constant .

    RPAREN          reduce using rule 62 (primary_expression -> constant .)
    COMMA           reduce using rule 62 (primary_expression -> constant .)
    TIMES           reduce using rule 62 (primary_expression -> constant .)
    DIVIDE          reduce using rule 62 (primary_expression -> constant .)
    PLUS            reduce using rule 62 (primary_expression -> constant .)
    MINUS           reduce using rule 62 (primary_expression -> constant .)
    LT              reduce using rule 62 (primary_expression -> constant .)
    GT              reduce using rule 62 (primary_expression -> constant .)
    LE              reduce using rule 62 (primary_expression -> constant .)
    GE              reduce using rule 62 (primary_expression -> constant .)
    EQ              reduce using rule 62 (primary_expression -> constant .)
    NE              reduce using rule 62 (primary_expression -> constant .)
    LAND            reduce using rule 62 (primary_expression -> constant .)
    EQUALS          reduce using rule 62 (primary_expression -> constant .)
    LOR             reduce using rule 62 (primary_expression -> constant .)
    SEMI            reduce using rule 62 (primary_expression -> constant .)


state 5

    (21) statement -> iteration_statement .

    RBRACE          reduce using rule 21 (statement -> iteration_statement .)
    SEMI            reduce using rule 21 (statement -> iteration_statement .)
    LBRACE          reduce using rule 21 (statement -> iteration_statement .)
    IF              reduce using rule 21 (statement -> iteration_statement .)
    REPEAT          reduce using rule 21 (statement -> iteration_statement .)
    UNTIL           reduce using rule 21 (statement -> iteration_statement .)
    RETURN          reduce using rule 21 (statement -> iteration_statement .)
    BREAK           reduce using rule 21 (statement -> iteration_statement .)
    LPAREN          reduce using rule 21 (statement -> iteration_statement .)
    INT             reduce using rule 21 (statement -> iteration_statement .)
    DOUBLE          reduce using rule 21 (statement -> iteration_statement .)
    CHAR            reduce using rule 21 (statement -> iteration_statement .)
    STRING          reduce using rule 21 (statement -> iteration_statement .)
    KEY             reduce using rule 21 (statement -> iteration_statement .)
    ID              reduce using rule 21 (statement -> iteration_statement .)
    ICONST          reduce using rule 21 (statement -> iteration_statement .)
    FCONST          reduce using rule 21 (statement -> iteration_statement .)
    SCONST          reduce using rule 21 (statement -> iteration_statement .)
    ENTER           reduce using rule 21 (statement -> iteration_statement .)
    EQUALS          reduce using rule 21 (statement -> iteration_statement .)
    LOR             reduce using rule 21 (statement -> iteration_statement .)
    LAND            reduce using rule 21 (statement -> iteration_statement .)
    EQ              reduce using rule 21 (statement -> iteration_statement .)
    NE              reduce using rule 21 (statement -> iteration_statement .)
    LT              reduce using rule 21 (statement -> iteration_statement .)
    GT              reduce using rule 21 (statement -> iteration_statement .)
    LE              reduce using rule 21 (statement -> iteration_statement .)
    GE              reduce using rule 21 (statement -> iteration_statement .)
    PLUS            reduce using rule 21 (statement -> iteration_statement .)
    MINUS           reduce using rule 21 (statement -> iteration_statement .)
    TIMES           reduce using rule 21 (statement -> iteration_statement .)
    DIVIDE          reduce using rule 21 (statement -> iteration_statement .)
    $end            reduce using rule 21 (statement -> iteration_statement .)


state 6

    (48) relational_expression -> additive_expression .
    (54) additive_expression -> additive_expression . PLUS multiplicative_expression
    (55) additive_expression -> additive_expression . MINUS multiplicative_expression

    LT              reduce using rule 48 (relational_expression -> additive_expression .)
    GT              reduce using rule 48 (relational_expression -> additive_expression .)
    LE              reduce using rule 48 (relational_expression -> additive_expression .)
    GE              reduce using rule 48 (relational_expression -> additive_expression .)
    EQ              reduce using rule 48 (relational_expression -> additive_expression .)
    NE              reduce using rule 48 (relational_expression -> additive_expression .)
    LAND            reduce using rule 48 (relational_expression -> additive_expression .)
    EQUALS          reduce using rule 48 (relational_expression -> additive_expression .)
    LOR             reduce using rule 48 (relational_expression -> additive_expression .)
    SEMI            reduce using rule 48 (relational_expression -> additive_expression .)
    RPAREN          reduce using rule 48 (relational_expression -> additive_expression .)
    COMMA           reduce using rule 48 (relational_expression -> additive_expression .)
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47


state 7

    (15) type -> STRING .

    ID              reduce using rule 15 (type -> STRING .)


state 8

    (1) translation_unit -> external_declaration .

    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    STRING          reduce using rule 1 (translation_unit -> external_declaration .)
    KEY             reduce using rule 1 (translation_unit -> external_declaration .)
    SEMI            reduce using rule 1 (translation_unit -> external_declaration .)
    LBRACE          reduce using rule 1 (translation_unit -> external_declaration .)
    IF              reduce using rule 1 (translation_unit -> external_declaration .)
    REPEAT          reduce using rule 1 (translation_unit -> external_declaration .)
    UNTIL           reduce using rule 1 (translation_unit -> external_declaration .)
    RETURN          reduce using rule 1 (translation_unit -> external_declaration .)
    BREAK           reduce using rule 1 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 1 (translation_unit -> external_declaration .)
    ID              reduce using rule 1 (translation_unit -> external_declaration .)
    ICONST          reduce using rule 1 (translation_unit -> external_declaration .)
    FCONST          reduce using rule 1 (translation_unit -> external_declaration .)
    SCONST          reduce using rule 1 (translation_unit -> external_declaration .)
    ENTER           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)
    EQUALS          reduce using rule 1 (translation_unit -> external_declaration .)
    LOR             reduce using rule 1 (translation_unit -> external_declaration .)
    LAND            reduce using rule 1 (translation_unit -> external_declaration .)
    EQ              reduce using rule 1 (translation_unit -> external_declaration .)
    NE              reduce using rule 1 (translation_unit -> external_declaration .)
    LT              reduce using rule 1 (translation_unit -> external_declaration .)
    GT              reduce using rule 1 (translation_unit -> external_declaration .)
    LE              reduce using rule 1 (translation_unit -> external_declaration .)
    GE              reduce using rule 1 (translation_unit -> external_declaration .)
    PLUS            reduce using rule 1 (translation_unit -> external_declaration .)
    MINUS           reduce using rule 1 (translation_unit -> external_declaration .)
    TIMES           reduce using rule 1 (translation_unit -> external_declaration .)
    DIVIDE          reduce using rule 1 (translation_unit -> external_declaration .)


state 9

    (67) constant -> FCONST .

    TIMES           reduce using rule 67 (constant -> FCONST .)
    DIVIDE          reduce using rule 67 (constant -> FCONST .)
    PLUS            reduce using rule 67 (constant -> FCONST .)
    MINUS           reduce using rule 67 (constant -> FCONST .)
    LT              reduce using rule 67 (constant -> FCONST .)
    GT              reduce using rule 67 (constant -> FCONST .)
    LE              reduce using rule 67 (constant -> FCONST .)
    GE              reduce using rule 67 (constant -> FCONST .)
    EQ              reduce using rule 67 (constant -> FCONST .)
    NE              reduce using rule 67 (constant -> FCONST .)
    LAND            reduce using rule 67 (constant -> FCONST .)
    EQUALS          reduce using rule 67 (constant -> FCONST .)
    LOR             reduce using rule 67 (constant -> FCONST .)
    RPAREN          reduce using rule 67 (constant -> FCONST .)
    SEMI            reduce using rule 67 (constant -> FCONST .)
    COMMA           reduce using rule 67 (constant -> FCONST .)


state 10

    (33) expression_statement -> SEMI .

    RBRACE          reduce using rule 33 (expression_statement -> SEMI .)
    SEMI            reduce using rule 33 (expression_statement -> SEMI .)
    LBRACE          reduce using rule 33 (expression_statement -> SEMI .)
    IF              reduce using rule 33 (expression_statement -> SEMI .)
    REPEAT          reduce using rule 33 (expression_statement -> SEMI .)
    UNTIL           reduce using rule 33 (expression_statement -> SEMI .)
    RETURN          reduce using rule 33 (expression_statement -> SEMI .)
    BREAK           reduce using rule 33 (expression_statement -> SEMI .)
    LPAREN          reduce using rule 33 (expression_statement -> SEMI .)
    INT             reduce using rule 33 (expression_statement -> SEMI .)
    DOUBLE          reduce using rule 33 (expression_statement -> SEMI .)
    CHAR            reduce using rule 33 (expression_statement -> SEMI .)
    STRING          reduce using rule 33 (expression_statement -> SEMI .)
    KEY             reduce using rule 33 (expression_statement -> SEMI .)
    ID              reduce using rule 33 (expression_statement -> SEMI .)
    ICONST          reduce using rule 33 (expression_statement -> SEMI .)
    FCONST          reduce using rule 33 (expression_statement -> SEMI .)
    SCONST          reduce using rule 33 (expression_statement -> SEMI .)
    ENTER           reduce using rule 33 (expression_statement -> SEMI .)
    EQUALS          reduce using rule 33 (expression_statement -> SEMI .)
    LOR             reduce using rule 33 (expression_statement -> SEMI .)
    LAND            reduce using rule 33 (expression_statement -> SEMI .)
    EQ              reduce using rule 33 (expression_statement -> SEMI .)
    NE              reduce using rule 33 (expression_statement -> SEMI .)
    LT              reduce using rule 33 (expression_statement -> SEMI .)
    GT              reduce using rule 33 (expression_statement -> SEMI .)
    LE              reduce using rule 33 (expression_statement -> SEMI .)
    GE              reduce using rule 33 (expression_statement -> SEMI .)
    PLUS            reduce using rule 33 (expression_statement -> SEMI .)
    MINUS           reduce using rule 33 (expression_statement -> SEMI .)
    TIMES           reduce using rule 33 (expression_statement -> SEMI .)
    DIVIDE          reduce using rule 33 (expression_statement -> SEMI .)
    $end            reduce using rule 33 (expression_statement -> SEMI .)


state 11

    (18) statement -> compound_statement .
